# my-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  foo.c  justfile  sites
.cargo/: config  config.toml
.github/workflow/: daily.yml
.github/workflows/: daily.yml
src/: cliargs.rs  logger.rs  main.rs
src/asyncs/: mod.rs
src/cache/: mod.rs
src/camera/: mod.rs
src/cmd/: bit.rs  message.rs  mod.rs
src/ds/: mod.rs  raii.rs  refer.rs
src/error/: mod.rs
src/ffi/: mod.rs
src/lifetime/: bounds.rs  conv.rs  mod.rs  traits.rs
src/notify/: mod.rs
src/peer/: mod.rs
src/rand/: mod.rs
src/requests/: books.rs  douban.rs  download.rs  hot.rs  mod.rs  traits.rs  wallpaper.rs  zxzj.rs
src/serial/: mod.rs
src/sites/: douban.rs  hot.rs  mod.rs  wallpaper.rs
src/sys/: battery.rs  cpu.rs  dyn_cpu.rs  gpu.rs  mem.rs  mod.rs  reg.rs  rules.rs  system.rs
src/tts/: mod.rs
src/video/: mod.rs
src/win/: mod.rs
