[package]
name = "my-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
# links = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "myrs"
path = "src/main.rs"

[dependencies]
libc = "0.2"

clap = { version = "4.3", features = ["derive"] }
sysinfo = "0.30"
systemstat = "0.2"

raw-cpuid = "11.0"

scraper = "0.19"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

ureq = { version = "2.6", features = ["json", "socks-proxy"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.28", features = ["io-util", "net", "time", "macros"] }

notify-rust = "4.8.0"

thiserror = { version = "1.0" }
anyhow = "1.0"

futures = "0.3"
battery = "0.7.8"
nvml-wrapper = "0.10"
pretty-bytes = "0.2"

# uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

subprocess = "0.2.9"

num_cpus = "1.15"
emojis = "0.6.0"
# libp2p = "0.50.0"

indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(unix)'.dependencies]
nix = "0.29"
sysctl = "0.5"

# [build-dependencies]
# cc = "1.0.79"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
strip = true
lto = true
incremental = true
